- Tidied up Changes file.

--- a/Changes
+++ b/Changes
@@ -1,4 +1,4 @@
-Revision history for Calendar-Renderer
+Revision history for Calendar-Plugin-Renderer
 
-0.01  Fri Mar 25 15:31:00 2011
+0.01  Sat Aug 22 04:30:00 2015
       - First version, released.
