--- a/Changes
+++ b/Changes
@@ -1,4 +1,7 @@
 Revision history for Calendar-Plugin-Renderer
 
+0.02  Thu Dec 17 14:50:00 2015
+      - Fixed typo in the pod document.
+
 0.01  Thu Dec 17 14:35:00 2015
       - First version, released.
