- Fixed max week row issue with regard to the Calendar::Hijri in particular. - Added test for every supported calendars. - Updated copyright year information.

--- a/Changes
+++ b/Changes
@@ -1,4 +1,9 @@
-Revision history for Calendar-Plugin-Renderer
+Revision history for Calendar::Plugin::Renderer
+
+0.06  Thu May 05 10:15:00 2016
+      - Fixed max week row issue with regard to the Calendar::Hijri in particular.
+      - Added test for every supported calendars.
+      - Updated copyright year information.
 
 0.05  Thu Dec 31 01:05:00 2015
       - Proposed fix for issue RT #110764.
