--- a/Changes
+++ b/Changes
@@ -1,5 +1,11 @@
 Revision history for Calendar::Plugin::Renderer
 
+0.07  Sun Jun 19 05:15:00 2016
+      - Added method text_calendar().
+      - Updated method svg_calendar().
+      - Made start index starts with 0 (Sun) for SVG format.
+      - Refactored package Calendar::Plugin::Renderer::SVG.
+
 0.06  Thu May 05 10:15:00 2016
       - Fixed max week row issue with regard to the Calendar::Hijri in particular.
       - Added test for every supported calendars.
