--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Calendar::Plugin::Renderer
 
+0.08  Tue Jun 21 12:20:00 2016
+      - Fixed 'consistent version' issue raised by CPANTS.
+
 0.07  Sun Jun 19 05:15:00 2016
       - Added method text_calendar().
       - Updated method svg_calendar().
