--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Calendar::Plugin::Renderer
 
+0.11  Wed Sep 14 10:30:00 2016
+      - Added unit test scripts (t/meta-json.t and t/meta-yml.t).
+
 0.10  Sat Jul 16 22:00:00 2016
       - Update pod document for method text_calendar().
       - Added key 'provides' to the Makefile.PL script as suggested by CPANTS.
