--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Calendar::Plugin::Renderer
 
+0.12  Fri Jan 06 12:00:00 2017
+      - Added method validate_params() for <month> and <year>.
+
 0.11  Wed Sep 14 10:30:00 2016
       - Added unit test scripts (t/meta-json.t and t/meta-yml.t).
 
