--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Calendar::Plugin::Renderer
 
+0.13  Sat Feb 24 11:30:00 2018
+      - Improved method exporting.
+
 0.12  Fri Jan 06 12:00:00 2017
       - Added method validate_params() for <month> and <year>.
 
