--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Calendar::Plugin::Renderer
 
+0.14  Fri Nov 02 15:35:00 2018
+      - Used namespace::autoclean instead.
+
 0.13  Sat Feb 24 11:30:00 2018
       - Improved method exporting.
 
